[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
    { name = "eagle", email = "eagle@42.fr" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/eagle/ft_package"
